[package]
name = "rustick"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.92"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.69"
features = ["AudioContext", "AudioDestinationNode", "AudioParam", "GainNode", "OscillatorNode"]
